welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:17: error: type mismatch;
 found   : Unit
 required: Int
	else if (speed>85) {
             ^